fix: gap between movie cards

--- a/style.css
+++ b/style.css
@@ -134,9 +134,9 @@ a {
 .review-boxes .container {
     display: flex; 
     justify-content: center;
-    column-gap: 160px;
+    column-gap: 94px;
     row-gap: 60px;
-    max-width: fit-content;
+    max-width:100vw;
     flex-wrap: wrap;
     padding: 10dvh 10dvw;
     background-image: url(./cinema2_bg.jpg);
@@ -268,6 +268,7 @@ a {
     background-color:rgb(29, 161, 242, 0.7);
     border-radius: 16px;
     padding:24px;
+    gap: 22px;
     box-shadow: 0px 8px 15px black;
     border: 2px inset;
 }
